New schedule for Off-Peak hours-Unsupported by FE

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ media_player: !include components/media_player.yaml
 switch: !include components/switch.yaml
 xiaomi_miot: !include components/xiaomi_miot.yaml
 mqtt: !include components/mqtt.yaml
+schedule: !include components/schedule.yaml
 wake_on_lan:
 
 # MISC
