--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,19 +4,6 @@ default_config:
 
 api:
 
-# COMPONENTS
-sensor: !include components/sensor.yaml
-binary_sensor: !include components/binary_sensor.yaml
-proximity: !include components/proximity.yaml
-template: !include components/template.yaml
-camera: !include components/camera.yaml
-media_player: !include components/media_player.yaml
-switch: !include components/switch.yaml
-xiaomi_miot: !include components/xiaomi_miot.yaml
-mqtt: !include components/mqtt.yaml
-schedule: !include components/schedule.yaml
-wake_on_lan:
-
 # MISC
 http: !include misc/http.yaml
 recorder: !include misc/recorder.yaml
@@ -27,3 +14,6 @@ automation: !include automations.yaml
 
 # SCRIPTS
 script: !include scripts.yaml
+
+homeassistant:
+  packages: !include_dir_named packages
