--- a/scripts.yaml
+++ b/scripts.yaml
@@ -1,1 +1,167 @@
-{}
+leave_home:
+  alias: Quitter la maison
+  mode: single
+  sequence:
+  - parallel:
+    - service: light.turn_off
+      target:
+        entity_id:
+        - light.all_lights
+      data: {}
+    - service: media_player.turn_off
+      target:
+        entity_id:
+        - media_player.kef
+        - media_player.philips_android_tv
+      data: {}
+    - service: switch.turn_off
+      target:
+        entity_id: switch.coffeemaker
+      data: {}
+welcome_home:
+  alias: Bienvenue a la maison
+  mode: single
+  sequence:
+  - service: hue.activate_scene
+    target:
+      entity_id: scene.entree_entree_100
+    data: {}
+  - delay: 3
+  - service: hue.activate_scene
+    target:
+      entity_id: scene.salon_salon_100
+    data: {}
+  - delay: 3
+  - service: hue.activate_scene
+    target:
+      entity_id: scene.cuisine_cuisine_100
+    data: {}
+reset_lights_day_area:
+  alias: Réinitialisation Lumières Coin Jour
+  mode: restart
+  sequence:
+  - alias: activate hue scenes on salon, entrée and cuisine
+    service: hue.activate_scene
+    data:
+      transition: 2
+    target:
+      entity_id:
+      - scene.salon_salon_100
+      - scene.entree_entree_100
+      - scene.cuisine_cuisine_100
+turn_off_media_center:
+  alias: Turn Off Media center
+  mode: single
+  sequence:
+  - alias: turn off tv and lsx in parallel
+    parallel:
+    - alias: if tv on then turn off tv
+      if:
+      - condition: state
+        entity_id: binary_sensor.is_tv_on
+        state: 'on'
+      then:
+      - service: media_player.turn_off
+        target:
+          entity_id: media_player.philips_android_tv
+        data: {}
+    - alias: if lsk on then turn off lsx
+      if:
+      - condition: not
+        conditions:
+        - condition: state
+          entity_id: media_player.kef
+          state: 'off'
+      then:
+      - service: media_player.turn_off
+        target:
+          entity_id: media_player.kef
+        data: {}
+turn_on_media_center:
+  alias: Turn On Media center
+  mode: single
+  sequence:
+  - alias: turn on tv and lsx in parallel
+    parallel:
+    - alias: if tv off then turn on tv
+      if:
+      - condition: state
+        entity_id: binary_sensor.is_tv_on
+        state: 'off'
+      then:
+      - if:
+        - condition: state
+          entity_id: media_player.philips_android_tv
+          state: unavailable
+        then:
+        - service: wake_on_lan.send_magic_packet
+          data:
+            mac: 68:07:0A:4A:F5:AB
+        - wait_for_trigger:
+          - platform: state
+            entity_id:
+            - media_player.philips_android_tv
+            to: 'off'
+          timeout:
+            hours: 0
+            minutes: 1
+            seconds: 0
+            milliseconds: 0
+          continue_on_timeout: true
+      - service: media_player.turn_on
+        data: {}
+        target:
+          entity_id: media_player.philips_android_tv
+    - alias: if lsx are off then turn on lsx
+      if:
+      - condition: state
+        entity_id: media_player.kef
+        state: 'off'
+      then:
+      - service: media_player.turn_on
+        target:
+          entity_id: media_player.kef
+        data: {}
+      - wait_for_trigger:
+        - platform: state
+          entity_id:
+          - media_player.kef
+          not_to: 'off'
+        timeout:
+          hours: 0
+          minutes: 0
+          seconds: 10
+          milliseconds: 0
+        continue_on_timeout: true
+      - alias: change lsk source
+        if:
+        - condition: not
+          conditions:
+          - condition: state
+            entity_id: media_player.kef
+            attribute: source
+            state: Opt
+        then:
+        - service: media_player.select_source
+          target:
+            entity_id: media_player.kef
+          data:
+            source: Opt
+    - alias: if lsx are on then change lsx source
+      if:
+      - condition: state
+        entity_id: media_player.kef
+        state: 'on'
+      - condition: not
+        conditions:
+        - condition: state
+          entity_id: media_player.kef
+          attribute: source
+          state: Opt
+          alias: LSK SOURCE OPT
+      then:
+      - service: media_player.select_source
+        target:
+          entity_id: media_player.kef
+        data:
+          source: Opt
