--- a/scripts.yaml
+++ b/scripts.yaml
@@ -18,6 +18,7 @@ leave_home:
       target:
         entity_id: switch.coffeemaker
       data: {}
+  icon: mdi:home-export-outline
 welcome_home:
   alias: Bienvenue a la maison
   mode: single
@@ -36,6 +37,7 @@ welcome_home:
     target:
       entity_id: scene.cuisine_cuisine_100
     data: {}
+  icon: mdi:home-import-outline
 reset_lights_day_area:
   alias: Réinitialisation Lumières Coin Jour
   mode: restart
@@ -49,6 +51,7 @@ reset_lights_day_area:
       - scene.salon_salon_100
       - scene.entree_entree_100
       - scene.cuisine_cuisine_100
+  icon: mdi:sofa
 turn_off_media_center:
   alias: Turn Off Media center
   mode: single
@@ -77,6 +80,7 @@ turn_off_media_center:
         target:
           entity_id: media_player.kef
         data: {}
+  icon: mdi:remote-tv-off
 turn_on_media_center:
   alias: Turn On Media center
   mode: single
@@ -165,3 +169,95 @@ turn_on_media_center:
           entity_id: media_player.kef
         data:
           source: Opt
+  icon: mdi:remote-tv
+pulse_2d_led_matrix:
+  alias: Pulse 2D LED Matrix
+  sequence:
+  - service: light.turn_on
+    data: {}
+    target:
+      entity_id: light.wled
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 1
+      milliseconds: 0
+  - service: light.turn_off
+    data: {}
+    target:
+      entity_id: light.wled
+  mode: queued
+  icon: mdi:led-on
+  max: 1000
+lights_set_tv:
+  alias: Réglage lumières lors que la TV joue un média
+  mode: restart
+  sequence:
+  - alias: turn off cuisine entree
+    service: light.turn_off
+    target:
+      entity_id:
+      - light.cuisine
+      - light.entree
+    data:
+      transition: 2
+  - alias: activate hue scene on salon
+    service: hue.activate_scene
+    target:
+      entity_id: scene.salon_salon_tv_playing
+    data:
+      transition: 2
+  icon: mdi:play
+lights_set_tv_paused:
+  alias: Réglage lumières lors que la TV est en pause
+  mode: restart
+  sequence:
+  - alias: activate hue scene on salon entee and cuisine
+    service: hue.activate_scene
+    target:
+      entity_id:
+      - scene.cuisine_cuisine_tv_paused
+      - scene.entree_entree_tv_paused
+      - scene.salon_salon_tv_paused
+    data:
+      transition: 2
+  icon: mdi:pause
+wake_up:
+  alias: Réveil Lumineux - Lumières
+  sequence:
+  - service: light.turn_off
+    data: {}
+    target:
+      entity_id: light.chambre
+  - service: light.turn_on
+    data:
+      transition: 300
+      brightness_pct: 100
+      color_temp: 490
+    target:
+      entity_id: light.chambre_bloom
+  - delay:
+      hours: 0
+      minutes: 5
+      seconds: 0
+      milliseconds: 0
+  - service: light.turn_on
+    data:
+      transition: 300
+      brightness_pct: 100
+    target:
+      entity_id:
+      - light.chambre_suspension
+      - light.chambre_chevet_jl
+      - light.chambre_chevet_valentine
+  - delay:
+      hours: 0
+      minutes: 10
+      seconds: 0
+      milliseconds: 0
+  - service: light.turn_on
+    data: {}
+    target:
+      entity_id: light.chambre_guirlande
+  mode: single
+  icon: mdi:weather-sunset-up
