--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -143,10 +143,12 @@ matrix_2d:
   module: matrix_2d
   class: matrix_2d
   log: matrix_2d
+  constrain_input_boolean: input_boolean.automation_matrix_2d
   excluded_domains:
     - sensor
     - zone
     - device_tracker
+    - update
   included_entities:
     - sensor.capteur_thp_salon_temperature
     - sensor.capteur_thp_chambre_bebe_temperature
@@ -154,13 +156,6 @@ matrix_2d:
     - sensor.capteur_thp_bureau_temperature
     - sensor.floirac_temperature
     - sensor.tesla_state
-    - sensor.tesla_rated_battery_range_km
-    - sensor.pixel_4a_battery_level
-    - sensor.pixel_6_pro_battery_level
-    - sensor.pixel_4a_geocoded_location
-    - sensor.pixel_6_geocoded_location
-    - sensor.lixee_east
-    - sensor.lixee_urms1
     - sensor.bouton_bibi_action
   excluded_entities:
     - light.all_lights
@@ -173,9 +168,11 @@ matrix_2d:
     - light.entree
     - light.exterieur
     - light.couloir
+    - light.hue_play_bars
     - binary_sensor.all_doors
     - binary_sensor.all_openings
     - binary_sensor.all_windows
+    - binary_sensor.is_front_door_recently_open
 
 monitor_mailbox:
   module: monitor_mailbox
