--- a/packages/cars/tesla/teslamate_integration.yaml
+++ b/packages/cars/tesla/teslamate_integration.yaml
@@ -93,3 +93,12 @@ mqtt:
       unique_id: tesla_time_to_full_charge
       state_topic: "teslamate/cars/1/time_to_full_charge"
       unit_of_measurement: h
+
+    - name: tesla_shift_state
+      unique_id: tesla_shift_state
+      state_topic: "teslamate/cars/1/shift_state"
+      
+    - name: tesla_inside_temp
+      unique_id: tesla_inside_temp
+      state_topic: "teslamate/cars/1/inside_temp"
+      unit_of_measurement: "°C"
