--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -90,7 +90,6 @@ monitor_system:
     - sensor.exterieur_switch_battery
     - sensor.salon_couloir_switch_battery
     - sensor.salon_switch_battery
-    - sensor.netatmo_cloud_battery_percent
     - sensor.capteur_thp_salon_battery
     - sensor.capteur_thp_chambre_battery
     - sensor.capteur_thp_bureau_battery
@@ -106,6 +105,7 @@ monitor_system:
     - sensor.capteur_mouvement_litiere_battery
     - sensor.capteur_mouvement_boite_aux_lettres_battery
     - sensor.the_cube_battery
+    - sensor.bouton_bibi_battery
 
 smart_cube:
   module: smart_cube
@@ -157,6 +157,7 @@ matrix_2d:
     - sensor.floirac_temperature
     - sensor.tesla_state
     - sensor.bouton_bibi_action
+    - sensor.tesla_shift_state
   excluded_entities:
     - light.all_lights
     - light.lumieres_rez_de_chaussee
