--- a/custom_sentences/fr/change_phone_assistant.yaml
+++ b/custom_sentences/fr/change_phone_assistant.yaml
@@ -3,7 +3,7 @@ intents:
   ChangePhoneAssistant:
     data:
       - sentences:
-          - "(parler à|parler a|parler au|discuter avec|passe moi|passez moi|passer moi) [la |le |l']{assistant}"
+          - "(parler à|parler a|parler au|discuter avec|passe moi|passe-moi|passez moi|passer moi) [la |le |l']{assistant}"
 lists:
   assistant:
     values:
@@ -11,5 +11,5 @@ lists:
         out: "Régis"
       - in: "jarvis"
         out: "Jarvis"
-      - in: (père noël|papa noël)
+      - in: "(père noël|papa noël)"
         out: "Papa Noël"
