--- a/appdaemon/apps/apps.yaml
+++ b/appdaemon/apps/apps.yaml
@@ -69,11 +69,6 @@ presence_simulator:
   go_to_bed_time: "22:30:00"
   sleep_time: "23:30:00"
 
-jarvis:
-  module: jarvis
-  class: jarvis
-  log: jarvis
-
 monitor_system:
   module: monitor_system
   class: monitor_system
@@ -176,6 +171,12 @@ matrix_2d:
     - binary_sensor.all_openings
     - binary_sensor.all_windows
     - binary_sensor.is_front_door_recently_open
+    - switch.volet_salon_bouton_stop_fallback
+    - switch.volet_salon_bouton_down_fallback
+    - switch.volet_salon_bouton_up_fallback
+    - camera.neuneu_map
+    - media_player.tv_cast
+    - remote.jl_s_tv
 
 monitor_mailbox:
   module: monitor_mailbox
