--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,3 +10,6 @@ script: !include scripts.yaml
 # Packages
 homeassistant:
   packages: !include_dir_named packages
+
+frontend:
+  themes: !include_dir_merge_named themes
