--- a/packages/energy/schedule_electrical_off_peak_hours.yaml
+++ b/packages/energy/schedule_electrical_off_peak_hours.yaml
@@ -1,40 +1,26 @@
 # https://www.home-assistant.io/integrations/schedule/
 
 schedule:
-  heures_creuses:
-    name: "Heures Creuses Électricité"
+  heures_pleines:
+    name: "Heures Pleines Électricité"
     monday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     tuesday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     wednesday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     thursday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     friday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     saturday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
     sunday:
-      - from: "00:00:00"
-        to: "05:20:00"
-      - from: "21:20:00"
-        to: "23:59:59"
+      - from: "05:20:00"
+        to: "21:20:00"
